@@ -88,15 +88,13 @@ typedef struct
 typedef enum {
     BK_TYPE_ACCESS=1, BK_TYPE_RANGE, 
     BK_TYPE_CODE, BK_TYPE_EXCEPTION,
-    BK_TYPE_PGMENTRY, BK_TYPE_PROTECT,
-    BK_TYPE_GDBTRAP
+    BK_TYPE_PGMENTRY, BK_TYPE_PROTECT
 } Ti68kBkptType;
 
 // Breakpoints cause (ti68k_bkpt_get_cause())
 typedef enum {
     BK_CAUSE_ACCESS=1, BK_CAUSE_RANGE, BK_CAUSE_ADDRESS,
-    BK_CAUSE_EXCEPTION, BK_CAUSE_PGMENTRY, BK_CAUSE_PROTECT,
-    BK_CAUSE_GDBTRAP
+    BK_CAUSE_EXCEPTION, BK_CAUSE_PGMENTRY, BK_CAUSE_PROTECT
 } Ti68kBkptCause;
 
 /* Functions */
