@@ -426,9 +426,6 @@ sim_write (sd, addr, buffer, size)
   init_pointers ();
   for (i = 0; i < size; i++)
     hw_put_byte_noexcept(addr + i, buffer[i]);
-  fill_prefetch_0 (); /* Force reloading the prefetch in case we changed the bytes under prefetch. */
-  extern void dbgwindow_refresh_code (void);
-  gdbcallback_refresh_debugger (); /* Reload the code window for the same reason */
   return size;
 }
 
