@@ -111,6 +111,7 @@ void ti68k_register_set_ssp(uint32_t val)
 void ti68k_register_set_pc(uint32_t val)
 {
     m68k_setpc(val);
+    fill_prefetch_0 (); /* Force reloading the prefetch. */
     registers_changed ();
 }
 
