@@ -90,8 +90,10 @@ static gboolean engine_func(gint *data)
 	{
 		if (!dbg_on)
 			gtk_debugger_enter(GPOINTER_TO_INT(*data));
-		sim_exception(bkpts.type == BK_CAUSE_EXCEPTION ? SIGSEGV :
-		              bkpts.type == BK_CAUSE_GDBTRAP ? SIGTRAP : SIGINT);
+		sim_exception(bkpts.type ?
+		              ((bkpts.type == BK_CAUSE_EXCEPTION || bkpts.type == BK_CAUSE_PROTECT) ? SIGSEGV
+		                                                                                    : SIGTRAP)
+		              : SIGINT);
 	}
 	else
 	{
